feat: Added getting current user info feature
